--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,3 +17,11 @@
 <div appTest color="red">
     Test Directive
 </div>
+
+<div *appCustomIf="true">
+    Custom If Directive
+</div>
+
+<div *appCustomFor="names; let name; let index = index">
+    {{index}} Custom For Directive {{name}} 
+</div>
