--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-home [title]="title"></app-home>
 
 <app-parent></app-parent>
+
+<app-life-cyle-hooks data="merhaba">Content</app-life-cyle-hooks>
 <router-outlet />
