view child, renderer2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-home [title]="title"></app-home>
 
 <app-parent></app-parent>
-
-<app-life-cyle-hooks data="merhaba">Content</app-life-cyle-hooks>
+<h1 #h>View Child</h1>
+<p #p>Renderer2</p>
+<app-life-cyle-hooks  data="merhaba">Content</app-life-cyle-hooks>
 <router-outlet />
